--- a/MobileUpGallery/Base.lproj/Main.storyboard
+++ b/MobileUpGallery/Base.lproj/Main.storyboard
@@ -138,6 +138,61 @@
             </objects>
             <point key="canvasLocation" x="1821.7391304347827" y="59.598214285714285"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="FLx-hb-PYQ">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" id="N7g-GO-H6O" customClass="DetailViewController" customModule="MobileUpGallery" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0aW-Xc-DWZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KaX-Ue-8JX">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <fontDescription key="fontDescription" name="Galvji-Bold" family="Galvji" pointSize="18"/>
+                                    <color key="textColor" systemColor="labelColor"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="Date photo" id="rVl-ik-XpQ">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="reply" id="3co-x7-Pwd">
+                                            <connections>
+                                                <action selector="backButton:" destination="N7g-GO-H6O" id="NK1-NJ-Z4I"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="gUc-Wh-q1w">
+                                            <connections>
+                                                <action selector="shareButton:" destination="N7g-GO-H6O" id="dlI-Lj-srT"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vdP-Hr-0Vn" customClass="CustomImageView" customModule="MobileUpGallery" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="98" width="414" height="700"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" priority="999" constant="700" id="E3i-l2-1ZY"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mgb-w2-NgV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="mgb-w2-NgV" firstAttribute="trailing" secondItem="vdP-Hr-0Vn" secondAttribute="trailing" id="11g-TA-8Oa"/>
+                            <constraint firstItem="vdP-Hr-0Vn" firstAttribute="centerX" secondItem="0aW-Xc-DWZ" secondAttribute="centerX" id="MBx-Ya-f7O"/>
+                            <constraint firstItem="vdP-Hr-0Vn" firstAttribute="leading" secondItem="mgb-w2-NgV" secondAttribute="leading" id="ZTG-Lh-hyC"/>
+                            <constraint firstItem="vdP-Hr-0Vn" firstAttribute="centerY" secondItem="0aW-Xc-DWZ" secondAttribute="centerY" id="ngb-wb-Jiy"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="fullPhotoImageView" destination="vdP-Hr-0Vn" id="D5c-0q-xuS"/>
+                        <outlet property="titleDatePhoto" destination="rVl-ik-XpQ" id="kX2-3V-JhU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JWN-YE-RZV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2654" y="60"/>
+        </scene>
         <!--My Navigation Controller-->
         <scene sceneID="UZk-ak-P9q">
             <objects>
@@ -161,6 +216,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
