--- a/MobileUpGallery/Base.lproj/Main.storyboard
+++ b/MobileUpGallery/Base.lproj/Main.storyboard
@@ -147,11 +147,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vdP-Hr-0Vn" customClass="CustomImageView" customModule="MobileUpGallery" customModuleProvider="target">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vdP-Hr-0Vn" customClass="CustomImageView" customModule="MobileUpGallery" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="98" width="414" height="700"/>
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="height" priority="999" constant="700" id="E3i-l2-1ZY"/>
                                 </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="gvT-B9-IZH" appends="YES" id="A6x-Sg-ef6"/>
+                                </connections>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="mgb-w2-NgV"/>
@@ -178,6 +182,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JWN-YE-RZV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <pinchGestureRecognizer id="gvT-B9-IZH">
+                    <connections>
+                        <action selector="scaleImage:" destination="N7g-GO-H6O" id="gGB-CT-nZ7"/>
+                    </connections>
+                </pinchGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2654" y="60"/>
         </scene>
